--- a/index.html
+++ b/index.html
@@ -14,6 +14,42 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+<div class="container">
+  <header>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#about">About</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Contact</a>
+    </nav>
+
+  </header>
+
+
+  <section class="about">
+    <div class="photo">
+      <p>photo goes here</p>
+    </div>
+    <div class="upper-txt">
+      <div class="myname">
+        <h1>Name Surname</h1>
+      </div>
+      <div class="blurb">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ducimus iste quasi nemo repellat voluptatem consequuntur qui vitae esse excepturi, voluptatum similique aperiam neque, nisi tempora fuga cupiditate! Nobis, iure.
+      </div>
+    </div>
+  </section>
+  
+  </div>
+    <button>
+
+    </button>
+
+       
+    
+
+  </section>
+
+</div>
 </body>
 </html>
